--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint --fix --dir src"
+		"lint": "next lint --fix --dir src",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@mdx-js/loader": "^2.3.0",
+		"@mdx-js/react": "^2.3.0",
+		"@next/mdx": "^13.5.4",
+		"clsx": "^2.0.0",
 		"next": "13.5.4",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-markdown": "^9.0.0",
+		"server-only": "^0.0.1"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/node": "^20",
+		"@types/mdx": "^2.0.8",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
